Tue Apr  2 20:42:27 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* elf.h: Remove.
	* symbol.c: Include libelf.h instead of elf.h.
	* reloc.c: Likewise.
	* reloc.h: Likewise.
	* output.c (armword): Move to output.h
	(ourword): Remove.
	(Output_Open): Add.
	(Output_OpenOutput): Make use of Output_Open.
	(writeElfSH): Remove.
	(Output_ELF): Use ELF Tool Chain library.
	* output.h (armword): Moved from output.c.
	* Makefile.am (asasm_CFLAGS): Add ELF Tool Chain header files.
	(asasm_LDFLAGS): Add -static.
	(asasm_LDADD): Add.
	* configure.ac (AC_USE_SYSTEM_EXTENSIONS, LT_INIT): Add.

	* unittests/reloc/ref/*_elf.txt: Update.

Tue Apr  2 19:48:51 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* predef_reg.c: Add stdio.h include.
	* reloc.c (Reloc_BuildForAOF, Reloc_BuildForELF): Add.
	(Reloc_RemoveRelocs): Delete Area::relocOutP.
	(Reloc_PrepareRelocOutPart1, Reloc_PrepareRelocOutPart2): Add.
	(Reloc_GetNumberRelocs, Reloc_AOFOutput, Reloc_ELFOutput): Remove.
	(NO_ELF_SUPPORT): Remove test.
	* reloc.h: Likewise.
	(struct RelocOut): Add.
	* main.c (NO_ELF_SUPPORT): Remove.
	* symbol.c (Symbol_BuildStringData, Symbol_BuildSymbolDataForAOF,
	Symbol_BuildSymbolDataForELF): Add.
	(NO_ELF_SUPPORT): Remove.
	(Symbol_OutputStrings, Symbol_OutputForAOF, Symbol_OutputForELF): Remove.
	* area.c (Area_Create): Init Area::relocOutP.
	(areaImage): Add assert on AREA_UDATA.
	* area.h (Area): Add relocOutputP, remove numRelocs.
	* output.c (Output_AOF, Output_ELF): Follow reloc & symbol API changes.
	* output.h (NO_ELF_SUPPORT): Remove.

Tue Apr  2 19:27:48 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* src/m_cpumem.c (GetBarrierType): Add support for LD, ISHLD, NSHLD,
	OSHLD.
	* src/target.c: Add ARMv8, Cortex-A53 and Cortex-A57 support.
	* src/lex.c (oArchs): Add support for TARGET_ARCH_8 and TARGET_ARCH_8_A.
	(Lex_GetBuiltinVariable): Follow Target_GetCPUFeature() return type
	change.
	* src/decode.c (Decode): Update comments.